# qwen3-tts.cpp

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md
docs/plans/: 2026-04-15-multiplatform-build-docs-design.md  2026-04-15-multiplatform-build-docs.md
scripts/: USER_SMOKETEST.md  convert_tts_to_gguf.py  run_user_smoketest.sh
server/: README.md  main.py  qwen3_tts_binding.py
src/: audio_tokenizer_decoder.cpp  audio_tokenizer_decoder.h  gguf_loader.cpp  main.cpp  qwen3_tts.cpp  qwen3_tts_quantize.cpp
src/common/: coreml_code_predictor.mm  coreml_code_predictor_stub.cpp  gguf_loader.cpp  gguf_loader.h  speaker_embedding_io.cpp  speaker_embedding_io.h
src/decoder/: audio_tokenizer_decoder.cpp  audio_tokenizer_decoder.h
src/encoder/: audio_tokenizer_encoder.cpp
src/pipeline/: qwen3_tts.cpp  qwen3_tts.h  qwen3tts_c_api.cpp  qwen3tts_c_api.h
src/tokenizer/: text_tokenizer.cpp  text_tokenizer.h  tokenizer_unicode.cpp  tokenizer_unicode.h  tokenizer_unicode_data.cpp
src/transformer/: tts_transformer.cpp  tts_transformer.h
tests/: test_codebook.cpp  test_decoder.cpp  test_encoder.cpp  test_tokenizer.cpp  test_transformer.cpp  test_vq_only.cpp
voices/: sample.json
